[gd_scene load_steps=5 format=3 uid="uid://5eq1bvek10ef"]

[ext_resource type="Script" path="res://scripts/ui.gd" id="1_5131p"]
[ext_resource type="PackedScene" uid="uid://ccpu37idlsyu8" path="res://scenes/budget_panel.tscn" id="1_iffwd"]
[ext_resource type="PackedScene" uid="uid://cgkqk55qden81" path="res://scenes/ledger_panel.tscn" id="1_tkijw"]
[ext_resource type="PackedScene" uid="uid://dgdeqr1qdbinj" path="res://scenes/rename_modal.tscn" id="4_rr6x4"]

[node name="UI" type="PanelContainer"]
custom_minimum_size = Vector2(1280, 720)
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_5131p")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="HeaderLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 48
text = "Budget Visualiser"

[node name="EditButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Edit"

[node name="LoadButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Load"

[node name="SaveButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Save"

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="BudgetPanel" parent="MarginContainer/VBoxContainer/HBoxContainer" instance=ExtResource("1_iffwd")]
unique_name_in_owner = true
layout_mode = 2
spent = 20.0

[node name="VSeparator" type="VSeparator" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="LedgerPanel" parent="MarginContainer/VBoxContainer/HBoxContainer" instance=ExtResource("1_tkijw")]
unique_name_in_owner = true
custom_minimum_size = Vector2(300, 0)
layout_mode = 2

[node name="ModalLayer" type="CanvasLayer" parent="."]

[node name="CenterContainer" type="CenterContainer" parent="ModalLayer"]
custom_minimum_size = Vector2(1280, 720)
offset_right = 1280.0
offset_bottom = 720.0
mouse_filter = 2

[node name="RenameModal" parent="ModalLayer/CenterContainer" instance=ExtResource("4_rr6x4")]
unique_name_in_owner = true
layout_mode = 2

[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer2/EditButton" to="." method="_on_edit_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer2/LoadButton" to="." method="_on_load_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer2/SaveButton" to="." method="_on_save_button_pressed"]
[connection signal="budget_changed" from="MarginContainer/VBoxContainer/HBoxContainer/BudgetPanel" to="." method="_on_budget_panel_budget_changed"]
[connection signal="transactions_changed" from="MarginContainer/VBoxContainer/HBoxContainer/LedgerPanel" to="MarginContainer/VBoxContainer/HBoxContainer/BudgetPanel" method="_on_ledger_panel_transactions_changed"]
[connection signal="modal_hidden" from="ModalLayer/CenterContainer/RenameModal" to="." method="_on_rename_modal_modal_hidden"]
[connection signal="name_submitted" from="ModalLayer/CenterContainer/RenameModal" to="." method="_on_rename_modal_name_submitted"]
